# umat

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/slurm/batch/: assign.sh  boundary.sh  preview.sh  segd-cust.sh  segd-cyto.sh  segd-dapi.sh  segd.sh
scripts/slurm/run/: cyto3.sh  nuclei.sh  segd-cust.sh  segd.sh
src/: addlab.py  assign.py  boundary.py  cellpose.py  preview.py  retrain.py  sample.py  segd.py  spot.py
src/umat/: __main__.py  conf.py
src/umat/tools/: addlab.py  assign.py  boundary.py  from_proseg.py  preview.py  retrain.py  sample.py  segd.py  signals.py  spot.py
